# zapier-rust

./: Cargo.toml
apps/frontend/: package.json
apps/frontend/src/: App.tsx
apps/frontend/src/components/: GetZap.tsx  LandingPage.tsx  Navbar.tsx  SignIn.tsx  SignUp.tsx
apps/hooks/: Cargo.toml
apps/hooks/src/: main.rs
apps/primary-backend/: Cargo.toml
apps/primary-backend/src/: main.rs
apps/primary-backend/src/handlers/: auth_handlers.rs  mod.rs  user_handlers.rs  zap_handlers.rs
apps/primary-backend/src/middlewares/: auth_middleware.rs  mod.rs
apps/primary-backend/src/routes/: auth_routes.rs  mod.rs  user_routes.rs  zap_routes.rs
apps/primary-backend/src/types/: auth.rs  mod.rs  zap.rs
apps/primary-backend/src/utils/: web_utils.rs
apps/primary-server/: Cargo.toml
apps/primary-server/src/: main.rs
apps/primary-server/src/handlers/: user_handlers.rs
apps/primary-server/src/routes/: mod.rs  user_routes.rs
apps/primary-server/src/types/: inputs.rs
apps/processor/: Cargo.toml
apps/processor/src/: main.rs
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
libs/database/: Cargo.toml  diesel.toml  docker-compose.yml
libs/database/migrations/2025-08-19-073635_create_user_zap_trigger/: down.sql  up.sql
libs/database/migrations/2025-08-19-144709_add_zap_run/: up.sql
libs/database/migrations/2025-08-19-145551_add_outbox_and_metadata/: up.sql
libs/database/migrations/2025-09-14-111543_create_user_table/: up.sql
libs/database/migrations/2025-09-16-004646_rename_user_table_to_users/: down.sql  up.sql
libs/database/migrations/2025-09-16-115648_create_zap_related_tables/: up.sql
libs/database/migrations/2025-09-17-003556_fix_zap_trigger_id_type/: up.sql
libs/database/migrations/2025-10-22-100238_update_user/: down.sql  up.sql
libs/database/src/: config.rs  database.rs  db.rs  lib.rs  models.rs  schema.rs  seed.rs
libs/database/src/models/: mod.rs  processor.rs  user.rs  zap.rs
libs/kafka/: Cargo.toml  docker-compose.yml
libs/kafka/src/: consumer.rs  producer.rs
