[workspace]
resolver = "3"

members = ["apps/*", "libs/*"]
# exclude = ["apps/frontend"]

[workspace.dependencies]
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "uuid",
    "chrono",
] }
