[package]
name = "hooks"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
database ={ path = "../../libs/database"}
serde = { workspace = true }
serde_json = { workspace = true }
# chrono = { workspace = true }
# uuid = { workspace = true }
# sqlx = { workspace = true }
# dotenv = { workspace = true }