[package]
name = "primary-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
log = "0.4.28"
validator = { version = "0.20.0", features = ["derive"] }
bcrypt = "0.17.1"
jsonwebtoken = "9.3.1"
futures = "0.3.31"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
database ={ path = "../../libs/database"}
serde = { workspace = true }
serde_json = { workspace = true }
diesel = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }