[package]
name = "primary-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.6",features = ["macros"]}
database = { path = "../../libs/database" }
tokio = { version = "1.48.0", features = ["full"] }
diesel ={ workspace = true}
deadpool-diesel = {workspace = true}
uuid = {workspace = true}
serde = {workspace = true}
chrono = {workspace = true}